--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "robor-next",
-  "version": "0.1.0",
+  "author": {
+    "name": "Ahmed",
+    "email": "m.ahmed@robor.tech"
+  },
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
