--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
