--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
+    "clsx": "^1.1.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
