--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-scroll": "^1.8.3",
     "react-visibility-sensor": "^5.1.1",
+    "sal.js": "^0.8.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
