--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-palette": "^1.0.2",
     "react-scroll": "^1.8.3",
     "react-visibility-sensor": "^5.1.1",
     "uuid": "^8.3.2"
