--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.4",
+    "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "clsx": "^1.1.1",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
+    "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-palette": "^1.0.2",
