--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.4",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
@@ -24,6 +23,7 @@
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-palette": "^1.0.2",
     "react-scroll": "^1.8.3",
     "react-visibility-sensor": "^5.1.1",
