--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.14.2",
     "react-icons": "^4.2.0",
     "react-palette": "^1.0.2",
     "react-scroll": "^1.8.3",
