--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "next-images": "^1.8.1",
+    "next-seo": "^4.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.2",
