update team and links

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robor-next",
   "author": {
     "name": "Ahmed",
-    "email": "m.ahmed@robor.tech"
+    "email": "m.ahmed@robor.systems"
   },
   "version": "1.0.0",
   "private": true,
