--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
+    "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
