--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "11.1.0",
     "next-images": "^1.8.1",
     "next-seo": "^4.26.0",
+    "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.2",
@@ -36,7 +37,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.2",
+    "autoprefixer": "10.4.5",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "postcss": "^8.3.6",
