--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "framer-motion": "^4.1.17",
-    "next": "11.1.0",
+    "next": "^12.2.2",
     "next-images": "^1.8.1",
     "next-seo": "^4.26.0",
     "next-themes": "^0.2.0",
