--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@headlessui/react": "^1.4.1",
     "@hookform/resolvers": "^2.8.0",
     "@svgr/webpack": "^5.5.0",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/line-clamp": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/forms": "0.5.2",
+    "@tailwindcss/line-clamp": "0.4.0",
+    "@tailwindcss/typography": "0.5.4",
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "framer-motion": "^4.1.17",
@@ -33,6 +33,7 @@
     "react-palette": "^1.0.2",
     "react-scroll": "^1.8.3",
     "react-visibility-sensor": "^5.1.1",
+    "tailwind": "^4.0.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
@@ -42,6 +43,6 @@
     "eslint-config-next": "11.1.0",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^3.1.6"
   }
 }
