--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-images": "^1.8.1",
     "next-seo": "^4.26.0",
     "next-themes": "^0.2.0",
+    "plaiceholder": "^2.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.2",
@@ -33,6 +34,7 @@
     "react-palette": "^1.0.2",
     "react-scroll": "^1.8.3",
     "react-visibility-sensor": "^5.1.1",
+    "sharp": "^0.30.7",
     "tailwind": "^4.0.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
