--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.14.2",
     "react-icons": "^4.2.0",
     "react-palette": "^1.0.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.29.0",
     "react-visibility-sensor": "^5.1.1",
