--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-responsive": "^9.0.0-beta.10",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.29.0",
+    "react-textarea-autosize": "^8.3.4",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "tailwind": "^4.0.0",
