--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-textarea-autosize": "^8.3.4",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "stability-client": "^1.6.1",
     "tailwind": "^4.0.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
