--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "0.5.4",
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
+    "express-rate-limit": "^6.6.0",
     "framer-motion": "^4.1.17",
     "gsap": "^3.10.4",
     "next": "^12.2.2",
@@ -29,6 +30,7 @@
     "next-seo": "^4.26.0",
     "next-themes": "^0.2.0",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.2",
     "react-icons": "^4.2.0",
