--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@tailwindcss/forms": "0.5.2",
     "@tailwindcss/line-clamp": "0.4.0",
     "@tailwindcss/typography": "0.5.4",
+    "@upstash/ratelimit": "^0.1.5",
+    "@upstash/redis": "^1.16.0",
     "axios": "^0.26.0",
     "clsx": "^1.1.1",
     "express-rate-limit": "^6.6.0",
