--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@hookform/resolvers": "^2.8.0",
+    "@netlify/plugin-nextjs": "^4.29.2",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/forms": "0.5.2",
     "@tailwindcss/line-clamp": "0.4.0",
